# needle

./: .gitignore  .gitmodules  README.md  altup_plan.md  dataset_readme.md  debug_nan.py  launch_train.sh  laurel_plan.md  matryoshka_plan.md  pyproject.toml  qctc-changes.md  requirements.txt  run_nar_experiments.sh  setup  sweep.yaml  test.py
.githooks/: prepare-commit-msg
ablations/: launch_tmux.sh  runner.py  schedule.tsv
docs/: hf_model_card.md  learned_matryoshka_plan.md  matryoshka_results.md  posttraining.md  pretraining.md  synth_training.md  tokenization_plan.md
experiements/: ReLU2.md  architecture.txt  datasets.txt  implementation.md  nar_results.csv  pruning.txt  training.md  training.txt
needle/: cli.py  mcp_server.py
notes/: architecture.txt  cloud-fallback.txt  dataset.txt  main.txt  sparsification.txt  tool-selection.txt  tries.txt
scripts/: audio_data.py  build_dataset.py  compare_voices.py  create_github_clean_vm.sh  generate_data.py  github_code_pipeline.sh  inspect_toucan.py  merge_xlam.py  rebalance_tools.py  redpajama_github_dry_run.sh  run_contrastive_sweep.py  split_dataset.py  stream_synth_to_gcs.py  summarize_sweep_logs.py  synthesize_tools_data.py  tools_data.py
src/: calibrate.py  categorize_failures.py  cli.py  constrained.py  data.py  data_bucket.py  distributed.py  eval.py  evaluate.py  export.py  finetune.py  gcs.py  generate_data.py  grpo.py  merge_xlam.py  mine_corrections.py  model.py  optim.py  pretrain.py  quantize.py  rebalance_tools.py  run.py  split_dataset.py  test.py  tokenize_data.py  tokenizer.py  tokenizer_train.py  tool_cfg.py  (+6 more)
(+33 files in other folders)
