[project]
name = "needle"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jax==0.9.0.1",
    "jaxlib==0.9.0.1",
    "flax==0.12.4",
    "optax==0.2.6",
    "datasets==4.5.0",
    "transformers==5.2.0",
    "wandb",
]

[project.scripts]
needle = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
