[project]
name = "needle"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "datasets",
    "transformers",
    "wandb",
    "sentencepiece",
    "jax-metal; sys_platform == 'darwin'",
]

[project.optional-dependencies]
tpu = ["jax[tpu]"]
gpu = ["jax[cuda12]"]
metal = ["jax-metal"]

[project.scripts]
needle = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
