[project]
name = "needle"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "datasets",
    "transformers",
    "wandb",
    "sentencepiece",
    "soundfile",
    "scipy",
]

[project.optional-dependencies]
tpu = ["jax[tpu]"]
gpu = ["jax[cuda12]"]

[project.scripts]
needle = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
